--- a/Comprehensive_Assessment/test-output/index.html
+++ b/Comprehensive_Assessment/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\mindsdet349\AppData\Local\Temp\testng-eclipse--556455806\testng-customsuite.xml</span>
+                    <span>C:\Users\mindsdet349\AppData\Local\Temp\testng-eclipse-1491513958\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -243,7 +243,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mindsdet349\AppData\Local\Temp\testng-eclipse--556455806\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mindsdet349\AppData\Local\Temp\testng-eclipse-1491513958\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -252,20 +252,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.DinningPage&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.TopDeals&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.orderPage&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.testCases.BaseClass&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.utilities.ReadConfig&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.FabricSofaPage&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.StudyPage&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.Aboutus&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.WishPage&quot;/&gt;
       &lt;class name=&quot;com.mindtree.testCases.TestCases&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.utilities.HelperClass&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.LoginPage&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.SearchPage&quot;/&gt;
-      &lt;class name=&quot;com.mindtree.pageObject.Bedroom&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -279,7 +266,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (14 classes)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -309,43 +296,43 @@ data.addRows(10);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(0, 3, 20175);
+data.setCell(0, 3, 19804);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'orderTest')
+data.setCell(1, 1, 'TopdealTest')
 data.setCell(1, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(1, 3, 14056);
+data.setCell(1, 3, 13498);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TopdealTest')
+data.setCell(2, 1, 'orderTest')
 data.setCell(2, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(2, 3, 12391);
+data.setCell(2, 3, 12665);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'StudyTest')
 data.setCell(3, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(3, 3, 12082);
+data.setCell(3, 3, 11870);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'BedTest')
 data.setCell(4, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(4, 3, 11327);
+data.setCell(4, 3, 11238);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'AbouTest')
+data.setCell(5, 1, 'DinningTest')
 data.setCell(5, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(5, 3, 9449);
+data.setCell(5, 3, 9835);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'DinningTest')
+data.setCell(6, 1, 'AbouTest')
 data.setCell(6, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(6, 3, 9130);
+data.setCell(6, 3, 8920);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'SofaTest')
 data.setCell(7, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(7, 3, 6835);
+data.setCell(7, 3, 7008);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'SearchTest')
+data.setCell(8, 1, 'WishlistTest')
 data.setCell(8, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(8, 3, 6683);
+data.setCell(8, 3, 6668);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'WishlistTest')
+data.setCell(9, 1, 'SearchTest')
 data.setCell(9, 2, 'com.mindtree.testCases.TestCases')
-data.setCell(9, 3, 6319);
+data.setCell(9, 3, 6250);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -365,16 +352,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.mindtree.testCases.TestCases</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">tearDown</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -390,50 +370,47 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">loginTest</span>
-                <span class="method-start">10272 ms</span>
+                <span class="method-start">9692 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">StudyTest</span>
-                <span class="method-start">30458 ms</span>
+                <span class="method-start">29501 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">SofaTest</span>
-                <span class="method-start">42544 ms</span>
+                <span class="method-start">41382 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">AbouTest</span>
-                <span class="method-start">49382 ms</span>
+                <span class="method-start">48408 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">BedTest</span>
-                <span class="method-start">58833 ms</span>
+                <span class="method-start">57331 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TopdealTest</span>
-                <span class="method-start">70165 ms</span>
+                <span class="method-start">68593 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">DinningTest</span>
-                <span class="method-start">82560 ms</span>
+                <span class="method-start">82103 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">SearchTest</span>
-                <span class="method-start">91697 ms</span>
+                <span class="method-start">91951 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">orderTest</span>
-                <span class="method-start">98385 ms</span>
+                <span class="method-start">98218 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">WishlistTest</span>
-                <span class="method-start">112445 ms</span>
+                <span class="method-start">110887 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.mindtree.testCases.BaseClass</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">118790 ms</span>
+                <span class="method-start">117588 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
