--- a/Comprehensive_Assessment/test-output/old/Default suite/methods.html
+++ b/Comprehensive_Assessment/test-output/old/Default suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee72e6">  <td>22/06/04 15:14:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.mindtree.testCases.TestCases@4386f16]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:15:07</td>   <td>10266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginTest()[pri:1, instance:com.mindtree.testCases.TestCases@4386f16]">loginTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:15:27</td>   <td>30452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.StudyTest()[pri:2, instance:com.mindtree.testCases.TestCases@4386f16]">StudyTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:15:39</td>   <td>42538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.SofaTest()[pri:3, instance:com.mindtree.testCases.TestCases@4386f16]">SofaTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:15:46</td>   <td>49376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.AbouTest()[pri:4, instance:com.mindtree.testCases.TestCases@4386f16]">AbouTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:15:55</td>   <td>58827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.BedTest()[pri:5, instance:com.mindtree.testCases.TestCases@4386f16]">BedTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:16:07</td>   <td>70159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.TopdealTest()[pri:6, instance:com.mindtree.testCases.TestCases@4386f16]">TopdealTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:16:19</td>   <td>82554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.DinningTest()[pri:7, instance:com.mindtree.testCases.TestCases@4386f16]">DinningTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:16:28</td>   <td>91691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.SearchTest()[pri:8, instance:com.mindtree.testCases.TestCases@4386f16]">SearchTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:16:35</td>   <td>98379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.orderTest()[pri:9, instance:com.mindtree.testCases.TestCases@4386f16]">orderTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="fa9491">  <td>22/06/04 15:16:49</td>   <td>112439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.WishlistTest()[pri:10, instance:com.mindtree.testCases.TestCases@4386f16]">WishlistTest</td> 
-  <td>main@1354003114</td>   <td></td> </tr>
-<tr bgcolor="ee72e6">  <td>22/06/04 15:16:55</td>   <td>118784</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.mindtree.testCases.BaseClass@79b06cab]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1354003114</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>22/06/07 14:27:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.mindtree.testCases.TestCases@48aaecc3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:27:29</td>   <td>9686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginTest()[pri:1, instance:com.mindtree.testCases.TestCases@48aaecc3]">loginTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:27:49</td>   <td>29495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.StudyTest()[pri:2, instance:com.mindtree.testCases.TestCases@48aaecc3]">StudyTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:28:01</td>   <td>41376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.SofaTest()[pri:3, instance:com.mindtree.testCases.TestCases@48aaecc3]">SofaTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:28:08</td>   <td>48402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.AbouTest()[pri:4, instance:com.mindtree.testCases.TestCases@48aaecc3]">AbouTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:28:17</td>   <td>57325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.BedTest()[pri:5, instance:com.mindtree.testCases.TestCases@48aaecc3]">BedTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:28:28</td>   <td>68587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.TopdealTest()[pri:6, instance:com.mindtree.testCases.TestCases@48aaecc3]">TopdealTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:28:42</td>   <td>82097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.DinningTest()[pri:7, instance:com.mindtree.testCases.TestCases@48aaecc3]">DinningTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:28:51</td>   <td>91945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.SearchTest()[pri:8, instance:com.mindtree.testCases.TestCases@48aaecc3]">SearchTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:28:58</td>   <td>98212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.orderTest()[pri:9, instance:com.mindtree.testCases.TestCases@48aaecc3]">orderTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="92d9cc">  <td>22/06/07 14:29:10</td>   <td>110881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.WishlistTest()[pri:10, instance:com.mindtree.testCases.TestCases@48aaecc3]">WishlistTest</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>22/06/07 14:29:17</td>   <td>117582</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.mindtree.testCases.TestCases@48aaecc3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
 </table>
